--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
+<p><span class="badge badge-light">San Jose, California</span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -146,7 +150,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Emeryville, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -154,7 +158,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -194,7 +198,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/ofglbfwL'>NICE Careers - Data Science Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nicesystems/job/ofglbfwL'>NICE Careers - Data Science Intern</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -202,7 +206,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/5235-S-Harper-Court/Senior-Data-Scientist-2_JR06852'>Senior Data Scientist-2</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/5235-S-Harper-Court/Senior-Data-Scientist-2_JR06852'>Senior Data Scientist-2</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... Conducts data investigation, including data wrangling, cleaning, sampling, 
 management, exploratory analysis, regression and classification, prediction, and 
@@ -249,7 +253,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
+<h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -288,7 +292,7 @@ and?...</p>
 <p>Oct 15, 2019 ... Data Scientist. Los Angeles, CA; Full Time; Mid Level. Enter your name and email 
 to generate a unique referral link and receive credit for anyone who applies?...</p>
 <hr/>
-<h5><a href='https://fractalanalytics.applytojob.com/apply/qEcm37wBnQ/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fractalanalytics.applytojob.com/apply/qEcm37wBnQ/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 13, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in San Francisco, 
 CA.</p>
@@ -305,7 +309,7 @@ CA.</p>
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://oviva.recruitee.com/o/data-science-internship'>Data Science Internship - Oviva</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oviva.recruitee.com/o/data-science-internship'>Data Science Internship - Oviva</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... ... to our clients and having fun doing it; You design, implement, and optimize 
 data processing workflows, using statistics and machine learning algorithms?...</p>
@@ -322,7 +326,7 @@ data processing workflows, using statistics and machine learning algorithms?...<
 <p><span class="badge badge-light">San Francisco, CA California</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/the-yes/1f314ee5-46c8-4465-8e56-22128881911a'>The Yes - Data Science & Analytics Lead</a></h5> 
+<h5><a href='https://jobs.lever.co/the-yes/1f314ee5-46c8-4465-8e56-22128881911a'>The Yes - Data Science & Analytics Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -370,7 +374,7 @@ Research and Development group. The data scientist will use their machine?...</p
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/adara/0c98213c-1823-401b-ac9d-4c26df7b6abd/apply'>ADARA - Field Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/adara/0c98213c-1823-401b-ac9d-4c26df7b6abd/apply'>ADARA - Field Data Scientist</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>1 day ago ... Field Data Scientist. New York, New York. Customer Success ? Customer 
 Success. Full Time. Submit your application. LinkedIn profile. Loading. Apply with
@@ -418,7 +422,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/5186447/Data-Scientist-m-f-d-?jobDbPVId=14205952&amp;l=en'>Data Scientist (m/f/d)</a></h5> 
+<h5><a href='https://idalab.softgarden.io/job/5186447/Data-Scientist-m-f-d-?jobDbPVId=14205952&amp;l=en'>Data Scientist (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -446,7 +450,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Arlington, VA, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tencent/jobs/4492809002'>Job Application for Senior Data Scientist, Media at Tencent</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4492809002'>Job Application for Senior Data Scientist, Media at Tencent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -458,7 +462,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://remerge.recruitee.com/o/data-scientist-1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://remerge.recruitee.com/o/data-scientist-1'>
       Data Scientist - Remerge
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin San Francisco New York Singapore Tokyo Seoul Beijing</span></p>
@@ -480,7 +484,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Jersey-City/Merrill-Lynch-Wealth-Management-Data-Scientist---Jersey-City--NJ_19068542'>Merrill Lynch Wealth Management Data Scientist ? Jersey City, NJ</a></h5> 
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Jersey-City/Merrill-Lynch-Wealth-Management-Data-Scientist---Jersey-City--NJ_19068542'>Merrill Lynch Wealth Management Data Scientist ? Jersey City, NJ</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Merrill Lynch Wealth Management (MLWM) Business Oversight and 
 Supervision Data Scientist Manager is responsible for coordinating efforts on the
@@ -500,10 +504,6 @@ Supervision Data Scientist Manager is responsible for coordinating efforts on th
 <hr/>
 <h5><a href='https://jobs.lever.co/centro/a9fe6f51-4115-4120-92a8-6992dacd3b3a'>Centro - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/joinsharenow/jobs/4487918002'>Job Application for Data Scientist Pricing (w/m/d) at SHARE NOW</a></h5> 
-<p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
